--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -11,8 +11,20 @@ services:
     ports:
       - "5332:5432"
     networks:
-      - postgres
+      - db
     restart: unless-stopped
+  full-stack-professional:
+      container_name: full-stack-professional
+      image: andrekreou/full-stack-professional
+      environment:
+        SPRING_DATASOURCE_URL: jdbc:postgresql://db:5432/customer
+      ports:
+        - "8088:8080"
+      networks:
+        - db
+      depends_on:
+        - db
+      restart: unless-stopped
   pgadmin:
     container_name: pgadmin
     image: dpage/pgadmin4
@@ -25,13 +37,13 @@ services:
     ports:
       - "5050:80"
     networks:
-      - postgres
+      - db
     restart: unless-stopped
     depends_on:
       - db
 
 networks:
-  postgres:
+  db:
     driver: bridge
 
 volumes:
