--- a/.github/workflows/backend-ci.yml
+++ b/.github/workflows/backend-ci.yml
@@ -23,9 +23,9 @@ jobs:
           --health-timeout 5s
           --health-retries 5
 
-    defaults:
-      run:
-        working-directory: ./full-stack-professional
+#    defaults:
+#      run:
+#        working-directory: ./full-stack-professional
     steps:
       - uses: actions/checkout@v3
       - uses: actions/setup-java@v3
