--- a/pom.xml
+++ b/pom.xml
@@ -13,15 +13,15 @@
 	<groupId>com.andrekreou</groupId>
 	<artifactId>full-stack-professional</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
-	<organization>
-		<name>andrekreou</name>
-	</organization>
+
 	<name>full-stack-professional</name>
 	<description>full-stack-professional</description>
 
 	<properties>
 		<java.version>17</java.version>
 		<docker.username>andrekreou</docker.username>
+		<docker.image.name>full-stack-professional</docker.image.name>
+		<docker.image.tag/>
 	</properties>
 
 	<dependencies>
@@ -178,7 +178,7 @@
 						</platforms>
 					</from>
 					<to>
-						<image>docker.io/${project.organization.name}/${project.artifactId}:${project.version}</image>
+						<image>docker.io/${docker.username}/${docker.image.name}:${docker.image.tag}</image>
 						<tags>
 							<tag>latest</tag>
 						</tags>
