--- a/.github/workflows/backend-cd.yml
+++ b/.github/workflows/backend-cd.yml
@@ -65,19 +65,9 @@ jobs:
           region: ${{ secrets.EB_REGION }}
           deployment_package: Dockerrun.aws.json
       - name: Commit and push Dockerrun.aws.json
-        env:
-          MY_PAT: ${{ secrets.PERSONAL_ACCESS_TOKEN }}
-          GIT_ASKPASS: ./askpass.sh
         run: |
-          cat >askpass.sh <<EOF
-          #!/bin/sh
-          echo "\$MY_PAT"
-          EOF
-          chmod +x askpass.sh
           git config user.name github-actions
           git config user.email github-actions@github.com
-          git config --global credential.helper cache
           git add .
           git commit -m "Update Dockerrun.aws.json docker image with new tag ${{ steps.build-number.outputs.BUILD_NUMBER }}"
-          # Use the script for authentication
-          GIT_ASKPASS=./askpass.sh git push origin master
+          git push
